[cs-demo] CSDTable - fixed chip overflow issue

--- a/cs-ui-demo/src/sass/_csd-code.scss
+++ b/cs-ui-demo/src/sass/_csd-code.scss
@@ -18,13 +18,17 @@
 .csd-inline-code {
 	font-size: 0.825rem;
 	font-family: "Lucida Console", monospace !important;
-	display: inline-block;
+	display: inline-flex;
 	padding: 0 0.375rem;
 	line-height: 1.25rem;
 	border-radius: 0.25rem;
 	background-color: var(--csd-inline-code-bg);
 	border: 1px solid transparent;
 	color: var(--csd-text-c);
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-width: 100%;
+	white-space: nowrap;
 
 	@at-root .cs-tooltip {
 		& {
@@ -34,7 +38,6 @@
 	}
 
 	&.csd-inline-code-custom {
-		display: flex;
 		background-color: transparent;
 		border: 1px solid var(--csd-preview-br);
 
@@ -46,6 +49,8 @@
 }
 
 .csd-inline-code-tooltip {
+	max-width: 100%;
+
 	&.csd-inline-code-tooltip-col-3 .cs-tooltip .cs-tooltip-body {
 		grid-template-columns: repeat(3, 1fr);
 	}
